@@ -1,0 +1,7 @@
+SECTIONS
+{
+  .text : {*(.text)}
+  . = ALIGN(CONSTANT (MAXPAGESIZE));
+  .data : {*(.data)}
+  /DISCARD/ : {*(*)}
+}
